k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: needly
  labels:
    app.kubernetes.io/part-of: needly
